--- a/JERICHO/package.json
+++ b/JERICHO/package.json
@@ -22,7 +22,8 @@
   "license": "MIT",
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.4",
