--- a/JERICHO/package.json
+++ b/JERICHO/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "better-sqlite3": "^12.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
